--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "bin": {
     "weather": "weather.js"
   },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,6 +17,8 @@
   "author": "Vladislav Magomedov",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
