--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-cli",
+  "name": "weather-cli-super",
   "version": "1.0.0",
   "description": "CLI for displaying weather info",
   "main": "weather.js",
@@ -12,10 +12,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "weather"
+    "weather",
+    "super"
   ],
   "author": "Vladislav Magomedov",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://Vladson12/weather-cli-super"
+  },
   "dependencies": {
     "axios": "^1.2.1",
     "chalk": "^5.2.0",
